# multisplat

./: .gitignore  CITATION.cff  CLAUDE.md  EXPERIMENTS.md  LICENSE.txt  README.md  RESULTS.md  pyproject.toml  requirements.txt
data/IP-Adapter Images/: bronze_bust.jfif
gaussctrl/: gc_model.py  gc_pipeline.py  gc_render.py  gc_trainer.py  utils.py
metrics/: clip_metrics.py  evaluate.py
multisplat/: __init__.py  config.py  datamanager.py  dataparser_ns.py  dataset.py  gc_config.py  gc_datamanager.py  gc_pipeline.py  gc_render.py  model.py  pipeline.py  render.py  trainer.py
scripts/: bear.sh  dinosaur.sh  edit_from_cache.py  face.sh  fangzhou.sh  garden.sh  retrain_from_edited.py  stone_horse.sh
