[project]
name = "multisplat"
version = "0.1.0"

dependencies=[
    "clip @ git+https://github.com/openai/CLIP.git",
    "accelerate",
    "einops",
]

# black
[tool.black]
line-length = 120

# pylint
[tool.pylint.messages_control]
max-line-length = 120
generated-members = ["numpy.*", "torch.*", "cv2.*", "cv.*"]
good-names-rgxs = "^[_a-zA-Z][_a-z0-9]?$"
ignore-paths = ["scripts/colmap2nerf.py"]
jobs = 0
ignored-classes = ["TensorDataclass"]

disable = [
  "duplicate-code",
  "fixme",
  "logging-fstring-interpolation",
  "too-many-arguments",
  "too-many-branches",
  "too-many-instance-attributes",
  "too-many-locals",
  "unnecessary-ellipsis",
]

[tool.setuptools.packages.find]
include = ["multisplat"]

[project.entry-points.'nerfstudio.method_configs']
multisplat = 'multisplat.config:multisplat_method'

[project.scripts]
ns-multisplat-render = "multisplat.render:entrypoint"